[tool.poetry]
name = "explore-sa-python"
version = "0.1.0"
description = "powerful GraphQL server crafted with Strawberry and Python for effortless data querying and manipulation."
authors = ["Anna Liepina <anna.liepina@yahoo.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
