[tool.poetry]
name = "explore-sa-python"
version = "0.1.0"
description = "powerful GraphQL server crafted with Strawberry and Python for effortless data querying and manipulation."
authors = ["Anna Liepina <anna.liepina@yahoo.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.0"
pymysql = "^1.1.0"
fastapi = "^0.109.2"
strawberry-graphql = "^0.219.1"
uvicorn = "^0.27.0.post1"
gunicorn = "^21.2.0"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
